--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
       <artifactId>javax.servlet-api</artifactId>
       <version>3.1.0</version>
     </dependency>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-jdbc</artifactId>
+          <version>4.3.4.RELEASE</version>
+      </dependency>
+
 
   </dependencies>
 </project>
